Fixing sonarqube issues